--- a/src/components/userInput/message-input.scss
+++ b/src/components/userInput/message-input.scss
@@ -1,4 +1,4 @@
-.messege-input-wrapper {
+.message-input-wrapper {
   position: fixed;
   bottom: -2px;
   right: 0;
@@ -8,7 +8,7 @@
   padding: 10px;
   gap: 10px;
 
-  .messege-input {
+  .message-input {
     width: 100%;
     padding: 5px 10px;
     border-radius: 10px;
