--- a/src/components/display/display.scss
+++ b/src/components/display/display.scss
@@ -3,5 +3,6 @@
   flex-direction: column;
   background-color: rgb(255, 255, 255);
   min-height: 100vh;
-  padding: 20px;
+  padding: 20px 20px 55px 20px;
+  gap: 10px;
 }
