--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -1,12 +1,12 @@
-.messege {
+.message {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  text-align: start;
   gap: 3px;
   background-color: rgb(0, 115, 255);
   color: #fff;
   border-radius: 10px;
-  width: min-content;
+  width: fit-content;
   padding: 10px;
 
   .name {
