--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,4 +2,12 @@
   background-color: #03cb28;
   color: #fff;
   padding: 20px 0;
+
+  .sort {
+    cursor: default;
+    .sort-order {
+      cursor: pointer;
+      color: #a4f9b4;
+    }
+  }
 }
