--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -13,6 +13,11 @@
     font-size: 0.7em;
     font-weight: 600;
   }
+
+  .date {
+    font-size: 0.5em;
+    text-align: end;
+  }
 }
 
 .align-right {
